objects/REVVY__MnCatalogNode__c.object
<CustomObject>
    <fields>
        <fullName>Brochure__c</fullName>
        <label>Brochure</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_Center_Code_Level_1__c</fullName>
        <label>Business Center Code Level 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Center_Desc_Level_1__c</fullName>
        <label>Business Center Desc Level 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group_Code_Level_2__c</fullName>
        <label>Business Group Code Level 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group_Desc_Level_2__c</fullName>
        <label>Business Group Desc Level 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_CPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will exclude this product from the Commercial Price list</description>
        <label>Exclude from CPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <label>Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Description__c</fullName>
        <label>Hierarchy Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Parts_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Detail_Code_Level_4__c</fullName>
        <label>Product Detail Code Level 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail_Desc_Level_4__c</fullName>
        <label>Product Detail Desc Level 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code_Level_3__c</fullName>
        <label>Product Line Code Level 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Desc_Level_3__c</fullName>
        <label>Product Line Desc Level 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_Product_Tier__c</fullName>
        <label>Toro Product Tier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_Product_Type__c</fullName>
        <description>Finished Good: Model or Finished Good information
Non-Stock Material: From SAP: Non-stock material is material that is not held in stock because it is consumed immediately.
Semi-Finished Good: Part</description>
        <label>Toro Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finished Good</fullName>
                </value>
                <value>
                    <fullName>Non-Stock Material</fullName>
                </value>
                <value>
                    <fullName>Semi-Finished Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>